<resources>
    <string name="app_name">Kmit canteen</string>
    <string name="slogan">Kmits  very  first  canteen  app</string>
    <string name="Rollno">Rollno</string>
    <string name="ans">17BD1A052H</string>
    <string name="name">Name</string>
    <string name="nam">Neel Lohit</string>
    <string name="password">Password</string>
    <string name="pass">neel123</string>
    <string name="SignIn">SignIn</string>
    <string name="SignUp">SignUp</string>

    <string name="title_activity_home">Home</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menu</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="food_name">name of the food</string>
    <string name="menu_name">Name of the menu</string>
    <string name="food_price">price of the food</string>


</resources>
