<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/food"
    tools:context=".SignIn">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtroll"
            android:hint="@string/Rollno"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColorHint="@android:color/white"
            android:text="@string/ans"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:inputType="text"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtpass"
            android:hint="@string/password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColorHint="@android:color/white"
            android:text="@string/pass"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />
    </LinearLayout>
    <info.hoang8f.widget.FButton
        android:id="@+id/btnSignIn"
        android:text="@string/SignIn"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:fButtonColor="@color/btnSignActive"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="4dp"
        />
</RelativeLayout>
